--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
 .text-primary {
     color: #007bff !important;
 }
+.text-secondary {
+    color: #323232 !important;
+	font: 14px sans-serif;
+}
 .justify-content-center {
 	text-align: center;
 }
