--- a/css/carousel.css
+++ b/css/carousel.css
@@ -24,7 +24,7 @@ img {vertical-align: middle;}
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   user-select: none;
-  background-color: #DCDCDC;
+  background-color: darkgray;
 }
 
 /* Position the "next button" to the right */
