--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 .text-primary {
     color: #007bff !important;
 	font: 14px sans-serif;
+	font-weight: bold;
 }
 .text-secondary {
     color: #323232 !important;
@@ -20,6 +21,10 @@
 }
 .axis { font: 16px sans-serif; }
 
+.bg-gradient {
+    background-image: linear-gradient(165deg,rgba(255,174,0,.2) 25%,rgb(25 0 144 / 20%) 95%);
+    background-size: 100% 100%;
+}
 div.tooltip { 
   position: absolute;     
   text-align: center;     
