--- a/css/nav.css
+++ b/css/nav.css
@@ -1,4 +1,4 @@
-ul {
+ul.nav {
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -6,11 +6,11 @@ ul {
   background-color: #006990;
 }
 
-li {
+li.nav {
   float: left;
 }
 
-li a {
+li.nav a.nav {
   display: block;
   color: white;
   text-align: center;
@@ -19,6 +19,6 @@ li a {
 }
 
 /* Change the link color to #111 (black) on hover */
-li a:hover {
+li.nav a:hover {
   background-color: #111;
 }
