--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,26 @@
 .text-head {
     color: #007bff !important;
+	font: sans-serif;
+}
+.text-sub-head {
+    color: #323232 !important;
+	font: 16px sans-serif;
+	text-align: center; 
 }
 .text-primary {
     color: #007bff !important;
 	font: 14px sans-serif;
 	font-weight: bold;
 }
+.text-secondary-head {
+    color: #007bff !important;
+	font: 16px sans-serif;
+	text-align: left; 
+}
 .text-secondary {
     color: #323232 !important;
-	font: 12px sans-serif;
+	font: 16px sans-serif;
+	text-align: left; 
 }
 .justify-content-center {
 	text-align: center;
