--- a/css/style.css
+++ b/css/style.css
@@ -62,12 +62,14 @@ div.tooltip {
   stroke-opacity: 0.6;
 }
 
-.textannotation text {
+.textannotation{
   text-shadow: -2px 0 2px #fff, 
                 0 2px 2px #fff,
                 2px 0 2px #fff, 
                 0 -2px 2px #fff;
-  font: italic 6px sans-serif;
+  font: italic 10px sans-serif;
+  position: relative;
+  bottom: 20px;
 }
 
 .voronoi path {
